<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/enterQuoteMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.uielements.fragments.CreateQuoteFragment">

    <TextView
        android:id="@+id/createQuoteTv"
        style="@style/customHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_quote" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/createQuoteTextInputLayout"
        style="@style/customTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createQuoteTv"
        android:hint="@string/enter_quote_here">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createQuoteTextInputEditText"
            style="@style/customTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/customFloatingActionButton"
        android:id="@+id/insertQuoteFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/save_quote"
        app:srcCompat="@drawable/save_ic" />

</RelativeLayout>
