<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/updateQuoteMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.UpdateQuoteFragment">

    <TextView
        android:id="@+id/updateQuoteTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/update_quote"
        android:textColor="@color/milkyYellow"
        android:textSize="@dimen/_27ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updatedQuoteEditeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_70sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:autofillHints=""
        android:backgroundTint="@color/milkyYellow"
        android:hint="@string/update_quote_here"
        android:inputType="textMultiLine"
        android:maxLength="700"
        android:padding="@dimen/_11sdp"
        android:textColor="@color/white"
        android:textColorHint="#919191"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateQuoteTv" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/updateQuoteFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_18sdp"
        android:backgroundTint="@color/milkyYellow"
        android:clickable="true"
        android:contentDescription="@string/save_changes"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/save_ic" />

</androidx.constraintlayout.widget.ConstraintLayout>