<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mainActivityVariable"
            type="com.example.quotes.view.MainActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainActivityMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mainToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quotes"
                android:textColor="@color/milkyYellow"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/noItemsLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainToolbar"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/_145sdp"
                android:layout_height="@dimen/_145sdp"
                android:contentDescription="@string/no_quote_available_image_view"
                android:src="@drawable/no_quote" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_quotes_available"
                android:textColor="#40FFF1D6"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainToolbar" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addQuoteFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:backgroundTint="?attr/colorSecondary"
            android:onClick="@{()-> mainActivityVariable.openEnterQuoteActivity()}"
            android:clickable="true"
            android:contentDescription="@string/create_a_quote"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/new_quote_ic" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
