<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="enterQuoteActivityVariable"
            type="com.example.quotes.view.EnterQuoteActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/enterQuoteMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.EnterQuoteActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/enterQuoteActivityToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/createQuoteTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:text="@string/create_quote"
            android:textColor="@color/milkyYellow"
            android:textSize="@dimen/_27ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterQuoteActivityToolbar" />

        <EditText
            android:id="@+id/quoteET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_70sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:autofillHints=""
            android:backgroundTint="@color/milkyYellow"
            android:hint="@string/enter_quote_here"
            android:inputType="textMultiLine"
            android:maxLength="700"
            android:padding="@dimen/_11sdp"
            android:textColor="@color/white"
            android:textColorHint="#919191"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createQuoteTv"
            tools:ignore="VisualLintTextFieldSize" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/insertQuoteFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:backgroundTint="@color/milkyYellow"
            android:clickable="true"
            android:onClick="@{()-> enterQuoteActivityVariable.onInsertQuoteFABClick()}"
            android:contentDescription="@string/save_quote"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/save_ic" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>